@@ -2,6 +2,7 @@ package com.selfsoft.util.regedit;
 
 import java.security.Key;
 import java.security.Security;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
@@ -9,16 +10,12 @@ import javax.crypto.spec.SecretKeySpec;
 
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
-import com.selfsoft.framework.common.CommonMethod;
-import com.selfsoft.framework.pinyin.PinyinHelper;
-
-import sun.misc.BASE64Decoder;
 
 public class RegeditForSystem {
 	
 	public static String doEncrypt(String key,String iv,String plainText) throws Exception{
 		
-		//Security.addProvider(new BouncyCastleProvider());
+		Security.addProvider(new BouncyCastleProvider());
 		
 		key=appendSpace(key,16);
 		
@@ -34,7 +31,7 @@ public class RegeditForSystem {
 	    
 	    byte[] b = cipher.doFinal(plainText.getBytes());
       
-	    return new sun.misc.BASE64Encoder().encode(b);
+	    return Base64.getEncoder().encodeToString(b);
 	   
 	}
 	
@@ -54,7 +51,7 @@ public class RegeditForSystem {
 		
 	    cipher.init(Cipher.DECRYPT_MODE, sKey,new IvParameterSpec(iv.getBytes("UTF-8")));
 	    
-	    byte[] b = new BASE64Decoder().decodeBuffer(plainText);
+	    byte[] b = Base64.getDecoder().decode(plainText);
 	    
 	    byte[] c = cipher.doFinal(b);
 	    
@@ -90,12 +87,18 @@ public class RegeditForSystem {
 	public static void main(String[] args)
 	{
 		try {
+			//公司名字拼音
+			String name = "GXJXQCXSFWYXGS";//YDBQCXSFWYXGS//HHJDQCFWYXGS 
+			//机器码
+			String code = "14DAE96B64D8";//BCAEC56E785D
+			//有效期
+			String date = "9999-12-31";
 			
-			String s = doEncrypt("KSDZ","","2011-09-29");
+			String s = doEncrypt(name,code,date);
 			
 			System.out.println(s);
 			
-			String m = deDecrypt("NNSDZQCWXFWYXGS","207C8F18B216","tHg4R3G+Sp9wk6Ha6SnQ2w==");
+			String m = deDecrypt(name,code,s);
 			
 			System.out.println(m);
 		} catch (Exception e) {
